# memory-claw

./: .env.example  .gitignore  2026-05-15-institutional-memory-engine.md  AGENTS.md  HEARTBEAT.md  README.md  SOUL.md  demo_conversation_engineers.md  pyproject.toml
.claude/: settings.local.json
.openclaw/: workspace-state.json
corpus/: board_meeting_april.txt  customer_success_playbook.txt  engineering_retro_search.txt  hr_onboarding_notes.txt  legal_vendor_terms.txt  security_review_summary.txt
dashboard/: app.py
docs/: asus-setup-guide.md  mock_data.md
inbox/: 000_nhs_northeast_liability_demo.md  020_meridian_pricing_demo.md  new_rfp_draft.txt
institutional_memory/: __init__.py  audit.py  cli.py  config.py  documents.py  drafts.py  ingest.py  listener.py  nemoclaw.py  openclaw_wake.py  paths.py  response_composer.py  search.py  slack.py  slack_ingest.py  slack_promotion.py  source_policy.py  state.py
nemoclaw/: README.md
policies/: openshell-policy.md
scripts/: cosine_sanity.py  demo_case.py  demo_rehearsal.py  deploy_asus.sh  dgx_bootstrap.py  dgx_check.py  final_gate.py  golden_listener_simulate.py  harness.py  ingest_corpus.py  live_handoff.py  nemoclaw_scaffold_check.py  prompt_slack_tokens.py  slack_listener.py  slack_listener_status.py  slack_setup_verify.py  start_slack_listener.sh  test_demo_scores.py
tests/: test_asus_deploy_docs.py  test_chunking.py  test_cli_help.py  test_cli_json.py  test_cosine_sanity.py  test_dashboard.py  test_demo_case.py  test_demo_rehearsal.py  test_dgx_check.py  test_drafts.py  test_final_gate.py  test_harness.py  (+13 more)
(+150 files in other folders)
