[project]
name = "institutional-memory-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "ollama>=0.3.0",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "slack-sdk>=3.27.0",
]

[project.scripts]
imem = "institutional_memory.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["institutional_memory"]
