[project]
name = "institutional-memory-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.115.0",
    "ollama>=0.3.0",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "slack-sdk>=3.27.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
imem = "institutional_memory.cli:main"
dashboard = "dashboard.app:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["institutional_memory", "dashboard"]
